fix(tsconfig): include __tests__ and adjust rootDir to support CI type-check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "target": "ESNext",
         "outDir": "./dist",
-        "rootDir": "./src",
+        "rootDir": ".",
         "module": "ES6",
         "noUnusedLocals": true
     },
+    "include": ["src", "__tests__"]
 }
