chore(tsconfig): skip lib check & use node moduleResolution to fix CI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "outDir": "./dist",
         "rootDir": ".",
         "module": "ES6",
-        "noUnusedLocals": true
+        "moduleResolution": "node",
+        "noUnusedLocals": true,
+        "skipLibCheck": true
     },
     "include": ["src", "__tests__"]
 }
