chore(ci): add lint step and ESLint config

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "typescript-app",
   "version": "1.0.0",
   "scripts": {
+    "lint": "eslint . --ext .ts",
     "test": "jest"
   },
   "devDependencies": {
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "@types/jest": "^29.5.2",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "eslint": "^8.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0"
   }
 }
