--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^29.5.2",
     "jest-environment-jsdom": "^29.5.0",
     "eslint": "^8.0.0",
+    "typescript": "^4.9.5",
     "@typescript-eslint/parser": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0"
   }
